# zomato

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  pyrefly.toml  pyrightconfig.json  railway.json  requirements.txt
docs/: architcure.md  dataset-contract.md  edge-cases.md  phase0-scope.md  problem-statement.md
frontend-next/: package-lock.json  package.json
frontend-next/src/app/: globals.css  layout.tsx  page.tsx
frontend-next/src/components/: RestaurantCard.tsx
frontend/src/: App.jsx  index.css
src/milestone1/: cli.py
src/milestone1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/milestone1/phase0/: __init__.py  commands.py
src/milestone1/phase0/prototype/: index.html
src/milestone1/phase0/tests/: test_phase0.py
src/milestone1/phase1/: __init__.py  commands.py  ingestor.py  models.py
src/milestone1/phase1/tests/: test_phase1.py
src/milestone1/phase2/: __init__.py  commands.py  models.py  validator.py
src/milestone1/phase2/tests/: test_phase2.py
src/milestone1/phase3/: __init__.py  commands.py  prompt_builder.py  service.py
src/milestone1/phase3/tests/: test_phase3.py
src/milestone1/phase4/: __init__.py  client.py  commands.py  models.py
src/milestone1/phase4/tests/: test_phase4.py
src/milestone1/phase5_api/: app.py  commands.py  routes.py
src/milestone1/phase5_api/tests/: test_api.py
stitch_ai_restaurant_recommendation_system/culinary_pulse/: DESIGN.md
